# vibe-break

./: .claude.json  .env  .env.example  .gitattributes  .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  opencode.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
docs/: crawler-plugin.md  plan.md
models/: demo.gltf
scripts/: generate_icons.py  sync-assets.cjs  test_mcp_server.py
src/: app.css  main.rs  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/assets/: Furina.vrm  Ganyu.vrm  Hayaseyuuka.vrm  Keqing.vrm  Xiaoyang.vrm
src-tauri/resources/assets/vrma/: VRMA_03.vrma  VRMA_04.vrma  VRMA_05.vrma  VRMA_06.vrma  テトリス.vrma
src-tauri/resources/assets/vrma/action/: Clapping.vrma  Jump.vrma  Relax.vrma
src-tauri/resources/assets/vrma/dance/: 1.vrma  2.vrma  VRMA_01.vrma  VRMA_02.vrma  VRMA_07.vrma
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/crawler/: cache.rs  engine.rs  mod.rs  plugin.rs
src-tauri/src/mcp_server/: event.rs  handler.rs  mod.rs
src/components/: VrmViewer.svelte  VrmViewer.vue
src/components/Scene/: CameraRig.svelte  Lighting.svelte  Scene.svelte  (+2 more)
src/lib/: animationController.svelte.ts  devLog.ts  devMock.ts  devSeed.ts  errors.ts  eventBus.svelte.ts  i18n.svelte.ts  logger.ts  mcpBridge.svelte.ts  persisted.ts  runtime.ts  stores.svelte.ts  strings.ts  types.ts  useWindowDrag.svelte.ts  utils.ts
(+14 files in other folders)
