[package]
name = "vibe-break"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_break_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["io-util", "net", "rt"] }
pmcp = { version = "2.10", features = ["streamable-http"], default-features = false }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
scraper = "0.27"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

